Bug fix: landing page overspill on mobile (#3)

--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -9,15 +9,8 @@
   box-sizing: border-box;
   padding: 20px;
   height: 100vh;
+  padding-top: 37vh;
 }
-
-  .c-landing__main {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-110px);
-    width: 100%;
-  }
 
   .c-landing__content {
     padding: 0 30px;
